[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/scripts/map_wrangler.gd" type="Script" id=1]
[ext_resource path="res://assets/Maps/Intro.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/scenes/player.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/scripts/map_mover.gd" type="Script" id=4]
[ext_resource path="res://assets/scenes/block_breaker.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/sounds/build.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/sounds/mine.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/sounds/shift.wav" type="AudioStream" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 128 )

[node name="Node2D" type="Node2D"]

[node name="MapWrangler" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="IntroMap" parent="MapWrangler" instance=ExtResource( 2 )]

[node name="ShiftDownTimer" type="Timer" parent="MapWrangler"]
wait_time = 10.0
one_shot = true

[node name="Player" parent="MapWrangler" instance=ExtResource( 3 )]
position = Vector2( 154, 151 )
jump_strength = 420.0

[node name="MapMover" type="Node2D" parent="MapWrangler"]
script = ExtResource( 4 )

[node name="BlockBreaker" parent="MapWrangler" instance=ExtResource( 5 )]

[node name="AudioBuild" type="AudioStreamPlayer" parent="MapWrangler"]
stream = ExtResource( 6 )

[node name="AudioMine" type="AudioStreamPlayer" parent="MapWrangler"]
stream = ExtResource( 7 )

[node name="AudioShift" type="AudioStreamPlayer" parent="MapWrangler"]
stream = ExtResource( 8 )
volume_db = -8.0

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="WallLeft" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -10, 128 )
shape = SubResource( 1 )

[node name="WallRight" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 330, 128 )
shape = SubResource( 1 )

[connection signal="timeout" from="MapWrangler/ShiftDownTimer" to="MapWrangler" method="_on_ShiftDownTimer_timeout"]
